List<Employee>に対するStream処理に変更